# python-backend_itmo-fall-2023

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: contracts.py  main.py  parcels.py  routers.py  utils.py
app/database/: cities.db  cities_db.py
bgnbd/: Dockerfile  bgnbd.pkl  main.py  model.py  routers.py  test_bgnbd.py
clv/: Dockerfile  main.py  routers.py  test_clv.py
gg/: gg.pkl  main.py  model.py  routers.py  test_gg.py
tests/: test_bgnbd.py  test_clv.py  test_gg.py  test_utils.py
