[tool.poetry]
name = "python-backend-itmo-fall-2023"
version = "0.0.1"
description = "Homeworks on \"Python Backend\" course conducted at ITMO University, fall 2023"
authors = ["Danil Islamov <danislamoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.0"

[tool.poetry.group.linters.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"


[tool.poetry.group.typing.dependencies]
mypy = "^1.3.0"


[tool.poetry.group.hooks.dependencies]
pre-commit = "^3.3.2"


[tool.black]
line-length = 120


[tool.isort]
line_length = 120


[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unreachable = true
warn_return_any = true
show_error_context = true


[tool.pylint]
    [tool.pylint.'MESSAGES CONTROL']
        disable = [
            'import-error',
            'missing-module-docstring',
            'missing-class-docstring',
            'missing-function-docstring',
            'too-few-public-methods'
        ]

    [tool.pylint.'FORMAT']
    max-line-length=120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
